--- a/.html/index.html
+++ b/.html/index.html
@@ -1,168 +1,98 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
-    <link rel="stylesheet" href="./../css/foundation.css" />
-    <link rel="stylesheet" href="css/app.css" />
-  </head>
-  <body>
+	<head>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<title>Hom.io | Welcome</title>
+		<link rel="stylesheet" href="./../css/foundation.min.css" />
+	</head>
 
-    <div class="row">
-      <div class="large-12 columns">
-        <h1>Welcome to Hom.io</h1>
-      </div>
-    </div>
+	<body>
+	 	<div class="top-bar">
+			<div class="top-bar-left">
+				<ul class="menu">
+					<li class="menu-text"><a href="#">Hom.io</a></li>
+					<li><a href="#">Demo</a></li>
+					<li><a href="#">Team</a></li>
+				</ul>
+			</div>
+			<!-- <div class="top-bar-right">
+				<ul class="menu">
+					<li><a href="#">Three</a></li>
+					<li><a href="#">Four</a></li>
+					<li><a href="#">Five</a></li>
+					<li><a href="#">Six</a></li>
+				</ul>
+			</div> -->
+		</div>
+	 
+		<div class="callout large">
+			<div class="row column text-center">
+				<h1>Hom.io</h1>
+				<p class="lead">SmartHome environment that focuses on minimizing energy consumption.</p>
+				<!-- <a href="#" class="button large">Learn More</a>
+				<a href="#" class="button large hollow">Learn Less</a> -->
+			</div>
+		</div>
+		<div class="row">
+			<div class="medium-4 columns">
+				<h3>BluMix</h3>
+				<p>blah</p>
+			</div>
+			<div class="medium-4 columns">
+				<h3>Intel Edison</h3>
+				<p>blah</p>
+			</div>
+			<div class="medium-4 columns">
+				<h3>other stuff</h3>
+				<p>other blah</p>
+			</div>
+		</div>
 
-    <div class="row">
-      <div class="large-12 columns">
-        <div class="callout large">
-          <h3>REPLACE WITH FLASK</h3>
-          <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-          <p>Once you've exhausted the fun in this document, you should check out:</p>
-          <div class="row">
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/sites/docs/">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-            </div>
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://zurb.com/university/code-skills">Foundation Code Skills</a><br />These online courses offer you a chance to better understand how Foundation works and how you can master it to create awesome projects.</p>
-            </div>
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/forum">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowlege.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-4 medium-4 medium-push-2 columns">
-              <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-            </div>
-            <div class="large-4 medium-4 medium-pull-2 columns">
-              <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+		<hr>
 
-    <div class="row">
-      <div class="large-8 medium-8 columns">
-        <h5>Here&rsquo;s your basic grid:</h5>
-        <!-- Grid Example -->
+		<div class="row column">
+			<ul class="vertical medium-horizontal menu expanded text-center">
+				<li><a href="#"><div class="stat">28</div><span>Sunlight (?) </span></a></li>
+				<li><a href="#"><div class="stat">18&deg;C</div><span>Temperature</span></a></li>
+				<li><a href="#"><div class="stat">43</div><span>movement</span></a></li>
+			</ul>
+		</div>
+		
+		<hr>
 
-        <div class="row">
-          <div class="large-12 columns">
-            <div class="callout ">
-              <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-6 medium-6 columns">
-            <div class="callout">
-              <p>Six columns</p>
-            </div>
-          </div>
-          <div class="large-6 medium-6 columns">
-            <div class="callout">
-              <p>Six columns</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="callout">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="callout">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="callout">
-              <p>Four columns</p>
-            </div>
-          </div>
-        </div>
+		<div class="row column">
+			<h3>Our Recent Work</h3>
+		</div>
+		<div class="row medium-up-3 large-up-4">
+			<div class="column">
+				<img class="thumbnail" src="http://placehold.it/550x550">
+			</div>
+			<div class="column">
+				<img class="thumbnail" src="http://placehold.it/550x550">
+			</div>
+			<div class="column">
+				<img class="thumbnail" src="http://placehold.it/550x550">
+			</div>
+			<div class="column">
+				<img class="thumbnail" src="http://placehold.it/550x550">
+			</div>
+		</div>
+		
+		<hr>
 
-        <hr />
+		<div class="row column">
+			<ul class="menu">
+				<li><a href="#">Back to Top</a></li>
+				<li><a href="#">Demo</a></li>
+				<li><a href="#">Team</a></li>
+			</ul>
+		</div>
 
-        <h5>We bet you&rsquo;ll need a form somewhere:</h5>
-        <form>
-          <div class="row">
-            <div class="large-12 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-12.columns" />
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-4 medium-4 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-4.columns" />
-            </div>
-            <div class="large-4 medium-4 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-4.columns" />
-            </div>
-            <div class="large-4 medium-4 columns">
-              <label>Input Label</label>
-              <div class="input-group">
-                <input type="text" placeholder="small-9.columns" class="input-group-field" />
-                <span class="input-group-label">.com</span>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <label>Select Box</label>
-              <select>
-                <option value="husker">Husker</option>
-                <option value="starbuck">Starbuck</option>
-                <option value="hotdog">Hot Dog</option>
-                <option value="apollo">Apollo</option>
-              </select>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-6 medium-6 columns">
-              <label>Choose Your Favorite</label>
-              <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-              <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-            </div>
-            <div class="large-6 medium-6 columns">
-              <label>Check these out</label>
-              <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-              <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <label>Textarea Label</label>
-              <textarea placeholder="small-12.columns"></textarea>
-            </div>
-          </div>
-        </form>
-      </div>
-
-      <div class="large-4 medium-4 columns">
-        <h5>Try one of these buttons:</h5>
-        <p><a href="#" class="small button">Simple Button</a><br/>
-        <a href="#" class="medium success button">Success Button</a><br/>
-        <a href="#" class="medium alert button">Alert Button</a><br/>
-        <a href="#" class="medium secondary button">Secondary Button</a></p>
-        <div class="callout">
-          <h5>So many components, girl!</h5>
-          <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
-          <a href="http://foundation.zurb.com/docs/" class="small button">Go to Foundation Docs</a>
-        </div>
-      </div>
-    </div>
-
-    <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/what-input.min.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+		<script>
+	      $(document).foundation();
+	    </script>
+	</body>
 </html>
