--- a/.html/index.html
+++ b/.html/index.html
@@ -12,6 +12,7 @@
 			<div class="top-bar-left">
 				<ul class="menu">
 					<li class="menu-text"><a href="#">Hom.io</a></li>
+					<li><a href="#">WHAT IS GOING ON</a></li>
 					<li><a href="#">Demo</a></li>
 					<li><a href="./team">Team</a></li>
 				</ul>
